<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/inicial"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo2"
    tools:context="com.testemedia.mediacp2.MainActivity"
    tools:ignore="MergeRootFrame">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/botaoMA"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                android:background="@drawable/button_round_black"
                android:text="@string/botaoMedias"
                android:textColor="@color/cinza_claro"
                android:textStyle="bold"
                android:fontFamily="sans-serif" />

            <Button
                android:id="@+id/botaoBoletim"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:background="@drawable/button_round_black"
                android:text="@string/boletim"
                android:textColor="@color/cinza_claro"
                android:textStyle="bold" />

            <Button
                android:id="@+id/botaoCalendario"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:background="@drawable/button_round_black"
                android:text="@string/calendario"
                android:textColor="@color/cinza_claro"
                android:textStyle="bold" />


            <Button
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:text="Grade Horária"
                android:id="@+id/timetable"
                android:visibility="visible"
                android:background="@drawable/button_round_black"
                android:textColor="@color/cinza_claro"
                android:textStyle="bold" />

            <Button
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:text="Proeja"
                android:id="@+id/botaoProeja"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_round_black"
                android:textColor="@color/cinza_claro"
                android:textStyle="bold"/>

                <!--  VISIBILITY - APENAS TROCAR AO ADICIONAR-->

            <Button
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:text="@string/informacoes"
                android:id="@+id/botaoSobre"
                android:visibility="visible"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_round_black"
                android:textColor="@color/cinza_claro"
                android:layout_marginBottom="20dp"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>


</RelativeLayout>